Gnome-shell v40+: Fix misaligned 'Do no disturb' button

--- a/gnome-shell/v40/_common.scss
+++ b/gnome-shell/v40/_common.scss
@@ -20,7 +20,6 @@ stage {
 .button, %button {
   @include button(normal);
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px;
   &:focus { @include button(focus); }
   &:insensitive { @include button(insensitive); }
@@ -1112,13 +1111,6 @@ StScrollBar {
           color: $fg_color;
         }
       }
-
-        .message-list-clear-button.button {
-          @include button(normal);
-          border-color: transparent;
-          &:hover,&:focus { @include button(hover); }
-          margin: 1.5em 1.5em 0;
-        }
 
         .message-list-sections {
           spacing: 1em;
