--- a/gnome-shell/v40/gnome-shell.css
+++ b/gnome-shell/v40/gnome-shell.css
@@ -16,7 +16,6 @@ stage {
   icon-shadow: 0 1px black;
   border: 1px solid #121213;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
     color: #a67cf3;
@@ -995,22 +994,6 @@ StScrollBar {
     color: #899fa7; }
   .message-list .message-content, .message-list .message-body {
     color: #98abb2; }
-
-.message-list-clear-button.button {
-  color: #98abb2;
-  background-color: rgba(14, 13, 15, 0.98);
-  box-shadow: none;
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  border: 1px solid #121213;
-  border-color: transparent;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    color: #a67cf3;
-    background-color: rgba(19, 18, 21, 0.98);
-    border: 1px solid #121213;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
 
 .message-list-sections {
   spacing: 1em; }
